Fetching a single product

--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -30,7 +30,7 @@
               </div>
               <div class="card__actions">
                 <button class="secondary-btn card-btn" type="button">
-                  <a href="/products/<%= product.id %>">Product detail</a>
+                  <a href="/products/<%= product._id %>">Product detail</a>
                 </button>
                 <%- include('../shared/add-to-cart.ejs', {product: product}) %>
               </div>
