Edit product function

--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -48,7 +48,7 @@
       </div>
 
       <% if (isEditing) { %>
-        <input type="hidden" value="<%= product.id %>" name="productId">
+        <input type="hidden" value="<%= product._id %>" name="productId">
       <% } %>
       
       <button type="submit" class="primary-btn">
