--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -29,9 +29,9 @@
                 <p class="product__description"><%= product.description %></p>
               </div>
               <div class="card__actions">
-                <button class="secondary-btn card-btn"><a href="/admin/edit-product/<%= product.id %>?edit=true">Edit</a></button>
+                <button class="secondary-btn card-btn"><a href="/admin/edit-product/<%= product._id %>?edit=true">Edit</a></button>
                 <form action="/admin/delete-product" method="post">
-                  <input type="hidden" name="productId" value="<%= product.id %>">
+                  <input type="hidden" name="productId" value="<%= product._id %>">
                   <button class="secondary-btn card-btn" type="submit">Delete</button>
                 </form>
               </div>
