--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -25,13 +25,17 @@
                 <img src="<%= product.imageUrl %>" alt="<%= product.description %>">
               </div>
               <div class="card__content">
-                <h3 class="product__price"><%= product.price %></h3>
-                <p class="product__description"><%= product.description %></p>
+                <h3 class="product__price">
+                  <%= product.price %>
+                </h3>
+                <p class="product__description">
+                  <%= product.description %>
+                </p>
               </div>
               <div class="card__actions">
-                <button class="secondary-btn card-btn" type="button">
-                  <a href="/products/<%= product._id %>">Product detail</a>
-                </button>
+                <a href="/products/<%= product._id %>">
+                  Product detail
+                </a>
                 <%- include('../shared/add-to-cart.ejs', {product: product}) %>
               </div>
             </header>
